@@ -1,4 +1,0 @@
-# do not edit this file, it will be overwritten on update
-
-# firmware-class requests, copies files into the kernel
-SUBSYSTEM=="firmware", ACTION=="add", RUN+="firmware --firmware=$env{FIRMWARE} --devpath=$env{DEVPATH}"
